bk_ida/gccida/g3/convert_modes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/expr.c:1741:21: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  convert_modes( machine_mode mode, machine_mode oldmode, rtx x, int unsignedp) 
                    ^
                    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/expr.c:1741:40: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  convert_modes( machine_mode mode, machine_mode oldmode, rtx x, int unsignedp) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/expr.c:1771:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + ( int)mode) != 1 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/expr.c:1796:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + ( int)mode) != 1 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/expr.c:1800:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + ( int)oldmode) == 1 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/convert_modes/src/obj/expr.o] Error 1
